[package]
name = "syosetsu-download"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0" }
tokio = { version = "1.0.2", features = ["full"] }
select = { version = "0" }
futures =  "0" 